# net-discourse-analysis

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .releaserc.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DATA_POLICY.md  GEMINI.md  NOTICE  README.md  SECURITY.md  analyze_comments.py  main.py  pyproject.toml  test.py
.agents/: coding-style.md
.agents/skills/grill-me/: SKILL.md
.github/: copilot-instructions.md  mergify.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  sphinx-build.yml  static.yml  ty-check.yml
docs/: project_progress.md
docs/sphinx/: conf.py  index.rst  limitations.md  nda.benchmarks.rst  nda.collect.rst  nda.configs.rst  nda.executors.rst  nda.hardware.rst  nda.models.rst  nda.monitoring.rst  nda.normalization.rst  nda.rst  nda.utils.rst  nda.workers.rst
docs/sphinx/_build/: .buildinfo  genindex.html  index.html  limitations.html  modules.html  nda.benchmarks.html  nda.collect.html  nda.configs.html  nda.executors.html  nda.hardware.html  nda.html  nda.models.html  nda.monitoring.html  nda.normalization.html  nda.utils.html  nda.workers.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/sphinx/_build/.doctrees/: environment.pickle  index.doctree  limitations.doctree  modules.doctree  nda.benchmarks.doctree  nda.collect.doctree  nda.configs.doctree  nda.doctree  nda.executors.doctree  nda.hardware.doctree  nda.models.doctree  nda.monitoring.doctree  nda.normalization.doctree  nda.utils.doctree  nda.workers.doctree
docs/sphinx/_build/_modules/: index.html
docs/sphinx/_build/_modules/nda/: cli.html
docs/sphinx/_build/_modules/nda/benchmarks/: cpu_bench.html
docs/sphinx/_build/_modules/nda/collect/: youtube.html
docs/sphinx/_build/_modules/nda/configs/: settings.html
docs/sphinx/_build/_modules/nda/executors/: base.html  hybrid_executor.html  process_executor.html  thread_executor.html
docs/sphinx/_build/_modules/nda/hardware/: cpu_info.html
docs/sphinx/_build/_modules/nda/models/: comment.html  external.html
docs/sphinx/_build/_modules/nda/monitoring/: logging_config.html  metrics.html
docs/sphinx/_build/_modules/nda/normalization/: labels.html  normalizer.html
docs/sphinx/_build/_modules/nda/utils/: timers.html
docs/sphinx/_build/_modules/nda/workers/: base.html  cpu_worker.html  thread_worker.html
docs/sphinx/_build/_sources/: index.rst.txt  modules.rst.txt  nda.benchmarks.rst.txt  nda.collect.rst.txt  nda.configs.rst.txt  nda.models.rst.txt  nda.utils.rst.txt  nda.workers.rst.txt
scripts/: run_taplo.py
src/: AGENTS.md  __init__.py  main.py
src/benchmarks/: __init__.py  cpu_bench.py  io_bench.py
src/configs/: __init__.py  hardware.yaml  settings.py
src/executors/: __init__.py  base.py  hybrid_executor.py  process_executor.py  thread_executor.py
src/hardware/: affinity.py  cpu_info.py
src/monitoring/: __init__.py  logging_config.py  metrics.py
src/nda/: cli.py
src/nda/benchmarks/: __init__.py  cpu_bench.py  scaling_bench.py
src/nda/collect/: __init__.py  youtube.py
src/nda/configs/: hardware.yaml  settings.py
src/nda/executors/: __init__.py  base.py  hybrid_executor.py  process_executor.py  thread_executor.py
src/nda/hardware/: __init__.py  cpu_info.py  topology.py
src/nda/models/: __init__.py  comment.py  external.py
src/nda/monitoring/: telemetry.py
src/nda/normalization/: __init__.py  labels.py  normalizer.py
src/nda/utils/: __init__.py  timers.py
src/nda/workers/: __init__.py  io_worker.py
src/utils/: timers.py
src/workers/: base.py  cpu_worker.py  embedding_worker.py  thread_worker.py
tests/: AGENTS.md  test_cli.py  test_models.py  test_normalizer.py
