[project]
name = "net-discourse-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Keisuke Ishii" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"

dependencies = ["psutil>=7.2.2", "pydantic>=2.13.4", "pyyaml>=6.0.3"]

[dependency-groups]
dev = [
  "ruff>=0.15.13",
  "ty>=0.0.37",
  "taplo>=0.9.3",
  "pre-commit>=4.6.0",
  "mdformat-gfm>=1.0.0",
  "mdformat-frontmatter>=2.0.10",
  "mdformat-tables>=1.0.0",
  "youtube-comment-downloader>=0.1.78",
  "pytest>=9.0.3",
  "sphinx>=8.2.0",
  "myst-parser>=4.0.0",
  "furo>=2024.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nda = "nda.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/nda"]

[tool.uv]
package = true

[tool.hatch.envs.default]
installer = "uv"

[tool.ruff]
exclude = [".git", ".venv", "build", "dist"]
line-length = 120
indent-width = 4
target-version = "py313"
# NOTE: Ruff は 314 に対応するが、新構文にエコシステムが追いついていないため、313 を指定する。将来的に 314 に変更する。
preview = true # プレビュー機能を利用したいため、有効にする。

[tool.ruff.lint]
mccabe = { max-complexity = 15 }
select = [
  "B",
  "D",
  "E",
  "F",
  "I",
  "N",
  "W",
  "T20",
  "C90",
  "TID252",
  "PGH003",
  "UP",
  "SIM",
  "RUF",
  "PIE",
  "PTH",
  "RET",
  "DTZ",
  "ARG",
  "ASYNC",
  "NPY",
  "PT",
]
ignore = ["D100", "D102", "D400", "D415"]
per-file-ignores = { "scripts/*.py" = [
  "D",
  "T201",
], "src/nda/executors/*.py" = [
  "D",
] }


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
