[project]
name = "net-discourse-analysis"
version = "0.2.0"
description = "Add your description here"
authors = [{ name = "Keisuke Ishii" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"

dependencies = [
  "neologdn>=0.5.6",
  "psutil>=7.2.2",
  "pydantic>=2.13.4",
  "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
  "ruff>=0.15.13",
  "ty>=0.0.37",
  "taplo>=0.9.3",
  "pre-commit>=4.6.0",
  "mdformat-gfm>=1.0.0",
  "mdformat-frontmatter>=2.0.10",
  "mdformat-tables>=1.0.0",
  "youtube-comment-downloader>=0.1.78",
  "pytest>=9.0.3",
  "sphinx>=8.2.0",
  "myst-parser>=4.0.0",
  "furo>=2024.8.6",
  "python-semantic-release>=10.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nda = "nda.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/nda"]

[tool.uv]
package = true

[tool.hatch.envs.default]
installer = "uv"

[tool.ruff]
exclude = [".git", ".venv", "build", "dist"]
line-length = 120
indent-width = 4
target-version = "py313"
# NOTE: Ruff は 314 に対応するが、新構文にエコシステムが追いついていないため、313 を指定する。将来的に 314 に変更する。
preview = true # プレビュー機能を利用したいため、有効にする。

[tool.ruff.lint]
mccabe = { max-complexity = 15 }
select = [
  "B",
  "D",
  "E",
  "F",
  "I",
  "N",
  "W",
  "T20",
  "C90",
  "TID252",
  "PGH003",
  "UP",
  "SIM",
  "RUF",
  "PIE",
  "PTH",
  "RET",
  "DTZ",
  "ARG",
  "ASYNC",
  "NPY",
  "PT",
]
ignore = ["D100", "D102", "D400", "D415"]
per-file-ignores = { "scripts/*.py" = [
  "D",
  "T201",
], "src/nda/executors/*.py" = [
  "D",
], "tests/*.py" = [
  "E501",
] }


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.semantic_release]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = false                                                              # NOTE: メジャーバージョンを上げない。開発後期に True にする。
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"
add_partial_tags = false
build_command = "uv build"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
# FIXME: allowed_tags をやめ、 minor_tags, patch_tags, other_allowed_tags の3本に将来的に分割したい。
other_allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "test",
]
allowed_tags = [
  "feat",
  "fix",
  "perf",
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "test",
]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false
